--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
-}
+@import url("https://mirinda-mewi.netlify.app/styles/main.css");
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  box-sizing: border-box;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* Navigation */
+.navBar {
+  background-color: var(--darc);
+  color: var(--snow);
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.navBar h1 {
+  cursor: pointer;
+}
+.navBar .badgeWrap {
+  cursor: pointer;
+}
+.rightNav {
+  display: flex;
+}
+.rightNav .badgeWrap {
+  padding: 0.2rem;
+}
+.rightNav .btn {
+  align-self: center;
+}
+.boxInput {
+  width: 32rem;
+  display: flex;
+  align-items: center;
+}
+.navBar .btn {
+  background-color: var(--primary);
+  border-color: var(--primary);
+  color: var(--snow);
+}
+.navBar .btn:hover {
+  background-color: var(--dark-prim);
+  border-color: var(--dark-prim);
+}
+.searchBox {
+  width: 80%;
 }
 
-.App-link {
-  color: #61dafb;
+/* Scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 5px;
+  background-color: #ffffff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+::-webkit-scrollbar-track {
+  background: var(--snow);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--gray);
 }
