--- a/src/Styles/products.css
+++ b/src/Styles/products.css
@@ -1,10 +1,10 @@
 /* Grid layout */
 
 .pageContainer {
+  background-color: var(--snow);
   display: grid;
   width: 100%;
   grid-template-columns: [col1]20rem [col2]auto [col3];
-  grid-template-rows: calc(100vh - 4.8rem);
 }
 
 /* aside filtering component */
@@ -50,7 +50,6 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(19rem, 1fr));
   gap: 2rem;
-  overflow: auto;
 }
 
 /* card component */
